pull out email and push functionality

--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -284,203 +284,9 @@ block content
 
       });
 
-        // TODO: can pull this out
     if user
-        script.
+        include ../pugJavascript/emailAndPushNotifications
 
-            $(document).ready(function(){
-
-              let amountOfEmailSubscriptions = Number('#{amountOfEmailSubscriptions}');
-
-              let amountOfPushSubscriptions = Number('#{amountOfPushSubscriptions}');
-
-              var alreadyHaveEmailNotifsOn = '#{alreadySubscribedForEmails}' == 'true'
-
-              var viewerHasConfirmedEmailAddress = #{viewingUserHasConfirmedEmail}
-
-              console.log('viewer has confirmed address: ' + viewerHasConfirmedEmailAddress);
-
-              // const viewerHasConfirmedEmailAddress = '#{viewingUserHasConfirmedEmail}' == 'true'
-
-
-              console.log('already have email notis on')
-
-              // change the color
-              // TODO: this isn't great, should be smarter
-              if (alreadyHaveEmailNotifsOn) {
-                $('.emailNotificationIcon i').css('color', 'white')
-              } else {
-                $('.emailNotificationIcon i').css('color', 'gray')
-              }
-
-
-              // if viewer has already confirmed their email address,
-              // then register them to receive notif emails when they click the icon
-              if(viewerHasConfirmedEmailAddress){
-
-                $('.emailNotificationIcon').click(function () {
-
-                  // TODO: add proper toggle
-
-                  console.log('Email notification icon clicked');
-                  var csrf = '#{_csrf}'
-
-                  const data = {
-                    _csrf: csrf,
-                    user: '#{user.channelUrl}',
-                    channel: '#{channel.channelUrl}'
-                  }
-
-                  $.ajax({
-                    type: 'POST',
-                    url: `/api/subscribeToEmailNotifications`,
-                    data,
-                    success: function (data) {
-
-                      $('.emailNotificationIcon i').css('color', 'white')
-                      let swalText = 'You have subscribed to their email notifications'
-
-                      // TODO: add the toggle here
-                      if (alreadyHaveEmailNotifsOn) {
-
-                        amountOfEmailSubscriptions = amountOfEmailSubscriptions - 1
-
-                        $('.emailSubscriptions').text(amountOfEmailSubscriptions)
-
-                        swalText = 'You have unsubscribed from their email notifications'
-                        $('.emailNotificationIcon i').css('color', 'gray')
-                      } else {
-
-                        amountOfEmailSubscriptions = amountOfEmailSubscriptions + 1
-
-                        $('.emailSubscriptions').text(amountOfEmailSubscriptions)
-                      }
-
-                      swal(swalText);
-
-                      alreadyHaveEmailNotifsOn = !alreadyHaveEmailNotifsOn;
-
-                      console.log(data);
-
-                      // Shows undefined when at 100%
-                    },
-                    error: function (err) {
-                      console.log(err);
-                    }
-                  });
-                })
-                // if viewer doesn't have confirmed email
-                // (can make smarter (please 'finish confirming') if you want
-              } else {
-                $('.emailNotificationIcon').click(function () {
-                  swal('Please finish confirming your email address on your account page first');
-                })
-
-                // TODO: if pending confirmation, say "please confirmation confirmation
-                // otherwise,
-              }
-
-
-
-
-              var alreadyHavePushNotifsOn = '#{alreadyHavePushNotifsOn}' == 'true'
-              // console.log(alreadyHavePushNotifsOn);
-
-              if (alreadyHavePushNotifsOn) {
-                $('.pushNotificationIcon i').css('color', 'white')
-              } else {
-                $('.pushNotificationIcon i').css('color', 'gray')
-              }
-
-              // hide the push notification icon if you can't do service workers or push manager
-              if (!('serviceWorker' in navigator) || !('PushManager' in window)) {
-                $('.pushNotificationIcon i').hide()
-              }
-
-
-              $('.pushNotificationIcon').click(function () {
-                console.log('hello');
-                var csrf = '#{_csrf}'
-
-                const data = {
-                  _csrf: csrf,
-                  user: '#{user.channelUrl}',
-                  channel: '#{channel.channelUrl}'
-                }
-
-                $.ajax({
-                  type: 'POST',
-                  url: `/api/subscribeToPushNotifications`,
-                  data,
-                  success: function (data) {
-
-                    // by default, turn the color grey and load up 'you have subbed' as the text
-                    $('.pushNotificationIcon i').css('color', 'white')
-                    let swalText = 'You have subscribed to their push notifications'
-
-                    // if push notifs already on
-                    if (alreadyHavePushNotifsOn) {
-                      amountOfPushSubscriptions = amountOfPushSubscriptions - 1
-
-                      $('.pushSubscriptions').text(amountOfPushSubscriptions)
-
-                      swalText = 'You have unsubscribed from their push notifications'
-                      $('.pushNotificationIcon i').css('color', 'gray')
-                    } else {
-                      amountOfPushSubscriptions = amountOfPushSubscriptions + 1
-
-                      $('.pushSubscriptions').text(amountOfPushSubscriptions)
-
-                    }
-
-                    swal(swalText);
-
-                    alreadyHavePushNotifsOn = !alreadyHavePushNotifsOn;
-
-                    console.log(data);
-                    //- console.log(data);
-
-                    // Shows undefined when at 100%
-
-
-                  },
-                  error: function (err) {
-                    console.log(err);
-                  }
-                });
-              })
-            })
-
-
-
-
-        script.
-          $('.unsubscribePushButton').click(function () {
-            console.log('hello');
-            var csrf = '#{_csrf}'
-
-            const data = {
-              _csrf: csrf,
-              user: '#{user.channelUrl}',
-              channel: '#{channel.channelUrl}'
-            }
-
-            $.ajax({
-              type: 'POST',
-              url: `/api/subscribeToPushNotifications`,
-              data,
-              success: function (data) {
-                //- console.log(data);
-
-                // Shows undefined when at 100%
-
-
-              },
-              error: function (err) {
-                console.log(err);
-              }
-            });
-            })
 
     if user && user.role == 'admin'
         script.
