--- a/views/media.pug
+++ b/views/media.pug
@@ -882,163 +882,7 @@ block extra_js
   script(src="/js/notificationServiceWorker.js")
 
   if user
-        script.
-
-            // EMAIL SUBSCRIPTION
-            $(document).ready(function(){
-
-              let amountOfEmailSubscriptions = Number('#{amountOfEmailSubscriptions}');
-
-              let amountOfPushSubscriptions = Number('#{amountOfPushSubscriptions}');
-
-              var alreadyHaveEmailNotifsOn = '#{alreadySubscribedForEmails}' == 'true'
-
-              var viewerHasConfirmedEmailAddress = #{viewingUserHasConfirmedEmail}
-
-              console.log('already have email notis on')
-
-              if (alreadyHaveEmailNotifsOn) {
-                $('.emailNotificationIcon i').css('color', 'white')
-              } else {
-                $('.emailNotificationIcon i').css('color', 'gray')
-              }
-
-              if (viewerHasConfirmedEmailAddress) {
-
-                $('.emailNotificationIcon').click(function () {
-                  console.log('Email notification icon clicked');
-                  var csrf = '#{_csrf}'
-
-                  const data = {
-                    _csrf: csrf,
-                    user: '#{user.channelUrl}',
-                    channel: '#{upload.uploader.channelUrl}'
-                  }
-
-                  $.ajax({
-                    type: 'POST',
-                    url: `/api/subscribeToEmailNotifications`,
-                    data,
-                    success: function (data) {
-
-                      $('.emailNotificationIcon i').css('color', 'white')
-                      let swalText = 'You have subscribed to their email notifications'
-
-                      if (alreadyHaveEmailNotifsOn) {
-
-                        amountOfEmailSubscriptions = amountOfEmailSubscriptions - 1
-
-                        $('.emailSubscriptions').text(amountOfEmailSubscriptions)
-
-                        swalText = 'You have unsubscribed from their email notifications'
-                        $('.emailNotificationIcon i').css('color', 'gray')
-                      } else {
-                        amountOfEmailSubscriptions = amountOfEmailSubscriptions + 1
-
-                        $('.emailSubscriptions').text(amountOfEmailSubscriptions)
-                      }
-
-
-
-
-
-                      swal(swalText);
-
-                      alreadyHaveEmailNotifsOn = !alreadyHaveEmailNotifsOn;
-
-                      console.log(data);
-
-                      // Shows undefined when at 100%
-
-
-                    },
-                    error: function (err) {
-                      console.log(err);
-                    }
-                  });
-                })
-                // if viewer doesn't have confirmed email
-                // (can make smarter (please 'finish confirming') if you want
-              } else {
-                $('.emailNotificationIcon').click(function () {
-                  swal('Please finish confirming your email address on your account page first');
-                })
-
-                // TODO: if pending confirmation, say "please confirmation confirmation
-                // otherwise,
-              }
-
-              var alreadyHavePushNotifsOn = '#{alreadyHavePushNotifsOn}' == 'true'
-
-              // console.log('ready');
-              // console.log(alreadyHavePushNotifsOn);
-
-              if (alreadyHavePushNotifsOn) {
-                $('.pushNotificationIcon i').css('color', 'white')
-              } else {
-                  $('.pushNotificationIcon i').css('color', 'gray')
-              }
-
-              // if the user's device doesn't have support for service worker and push manager
-              // note: Safari has ServiceWorker but not PushManager
-              if (!('serviceWorker' in navigator) || !('PushManager' in window)) {
-                $('.pushSubscriptionsDiv').hide()
-              }
-
-
-              $('.pushNotificationIcon').click(function () {
-                console.log('hello');
-                var csrf = '#{_csrf}'
-
-                const data = {
-                  _csrf: csrf,
-                  user: '#{user.channelUrl}',
-                  channel: '#{upload.uploader.channelUrl}'
-                }
-
-                $.ajax({
-                  type: 'POST',
-                  url: `/api/subscribeToPushNotifications`,
-                  data,
-                  success: function (data) {
-
-                    // by default, turn the color grey and load up 'you have subbed' as the text
-                    $('.pushNotificationIcon i').css('color', 'white')
-                    let swalText = 'You have subscribed to their push notifications'
-
-                    // if push notifs already on
-                    if (alreadyHavePushNotifsOn) {
-                      amountOfPushSubscriptions = amountOfPushSubscriptions - 1
-
-                      $('.pushSubscriptions').text(amountOfPushSubscriptions)
-
-                      swalText = 'You have unsubscribed from their push notifications'
-                      $('.pushNotificationIcon i').css('color', 'gray')
-                    } else {
-                      amountOfPushSubscriptions = amountOfPushSubscriptions + 1
-
-                      $('.pushSubscriptions').text(amountOfPushSubscriptions)
-
-                    }
-
-                    swal(swalText);
-
-                    alreadyHavePushNotifsOn = !alreadyHavePushNotifsOn;
-
-                    console.log(data);
-                    //- console.log(data);
-
-                    // Shows undefined when at 100%
-
-
-                  },
-                  error: function (err) {
-                    console.log(err);
-                  }
-                });
-              })
-            })
-
+    include pugJavascript/emailAndPushNotifications
 
   script.
 
