add the custom url feature to the newtube plus explainer

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -139,6 +139,8 @@ block content
 
             - Livestreaming with live chat
 
+            - Custom Channel Url: newtube.app/#{user.channelUrl} instead of newtube.app/user/#{user.channelUrl}
+
             - $4.95/month, cancel at any time
 
             - Support alternative tech that values your speech and privacy
