fix(backend): validation for comment body

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -72,44 +72,43 @@ block content
       cursor: pointer;
     }
 
-  //form(action='https://www.paypal.com/cgi-bin/webscr', method='post')
-  //  // Identify your business so that you can collect the payments.
-  //  input(type='hidden', name='business', value='ceo@pew.tube')
-  //  // Specify a Subscribe button.
-  //  input(type='hidden', name='cmd', value='_xclick-subscriptions')
-  //  // Identify the subscription.
-  //  input(type='hidden', name='item_name', value="Recurring PewTube Account Top-Up")
-  //  //input(type='hidden', name='item_number', value='Purchase Acount Top-Up')
-  //  // Set the terms of the regular subscription.
-  //  input(type='hidden', name='a3', value='5.00')
-  //  input(type='hidden', name='p3', value='1')
-  //  input(type='hidden', name='t3', value='M')
-  //  // Set recurring payments until canceled.
-  //  input(type='hidden', name='src', value='1')
-  //  // Provide a drop-down menu option field.
-  //  input(type='hidden', name='on0', value='Format')
-  //  | Format
-  //  br
-  //  select(name='os0')
-  //    option(value='Select a format') -- Select a format --
-  //    option(value='plaintext') Plain text
-  //    option(value='HTML') HTML
-  //  br
-  //  // Display the payment button.
-  //  input(type='image', name='submit', src='https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_subscribe_113x26.png', alt='Subscribe')
-  //  img(alt='', width='1', height='1', src='https://www.paypalobjects.com/en_US/i/scr/pixel.gif')
+  //- form(action='https://www.paypal.com/cgi-bin/webscr', method='post')
+  //-  // Identify your business so that you can collect the payments.
+  //-  input(type='hidden', name='business', value='ceo@pew.tube')
+  //-  // Specify a Subscribe button.
+  //-  input(type='hidden', name='cmd', value='_xclick-subscriptions')
+  //-  // Identify the subscription.
+  //-  input(type='hidden', name='item_name', value="Recurring PewTube Account Top-Up")
+  //-  //input(type='hidden', name='item_number', value='Purchase Acount Top-Up')
+  //-  // Set the terms of the regular subscription.
+  //-  input(type='hidden', name='a3', value='5.00')
+  //-  input(type='hidden', name='p3', value='1')
+  //-  input(type='hidden', name='t3', value='M')
+  //-  // Set recurring payments until canceled.
+  //-  input(type='hidden', name='src', value='1')
+  //-  // Provide a drop-down menu option field.
+  //-  input(type='hidden', name='on0', value='Format')
+  //-  | Format
+  //-  br
+  //-  select(name='os0')
+  //-    option(value='Select a format') -- Select a format --
+  //-    option(value='plaintext') Plain text
+  //-    option(value='HTML') HTML
+  //-  br
+  //-  // Display the payment button.
+  //-  input(type='image', name='submit', src='https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_subscribe_113x26.png', alt='Subscribe')
+  //-  img(alt='', width='1', height='1', src='https://www.paypalobjects.com/en_US/i/scr/pixel.gif')
 
 
 
   .container
     include ./accountHeader
 
-
     h1.fw.text-center Channel Overview
     hr
 
-    // TODO: export a variable plus_enabled if user enables payments
-    // TODO: has to have styled updated with fw
+    //- TODO: export a variable plus_enabled if user enables payments
+    //- TODO: has to have styled updated with fw
     if process.env.PLUS_ENABLED == 'true'
       h2.fw.text-center(style="margin-bottom:16px") Upgrade To #{brandName} Plus
 
@@ -118,18 +117,19 @@ block content
           p Thank you so much for subscribing!
           p Your support makes NewTube possible
           p Please enjoy your new features:
-          //h4 Automatic YouTube backup functionality, unlisted uploads, private uploads, 2GB upload size
-          // h4 Livestreaming, unlisted uploads, private uploads, 2GB upload size
+          //-h4 Automatic YouTube backup functionality, unlisted uploads, private uploads, 2GB upload size
+          //- h4 Livestreaming, unlisted uploads, private uploads, 2GB upload size
           h4 Unlisted uploads, private uploads, 2GB upload size
 
 
         else
-          //  - Unlisted, private and scheduled uploads
+          //-  
+            - Unlisted, private and scheduled uploads
             - Built in monetization via direct payments (COMING SOON)
             - One-click complete YouTube backup (including future uploads)
             - Access to NodeTube Recording Studio (COMING EVENTUALLY)
 
-            //- NewTube Recording Studio (Coming Soon)
+          //- NewTube Recording Studio (Coming Soon)
 
 
           p.fw(style="white-space:pre-line;margin-bottom:19px;font-size:19px;margin-top:23px;").
@@ -145,37 +145,31 @@ block content
 
             - Support alternative tech that values your speech and privacy
 
-          // - Secure purchase through Stripe
-
-
+          //- - Secure purchase through Stripe
           //- One-click complete YouTube backup (including future uploads)
-
-
 
           button.stripe-button-el#customButton(type="submit" class="stripe-button-el" style="visibility: visible;")
             span(style="display: block; min-height: 30px;") Buy Now
-            // img(src="/images/stripe-white.png" style="max-width:200px")
+            //- img(src="/images/stripe-white.png" style="max-width:200px")
 
-          //br
-          //br
-          //
-          //button.stripe-button-el#customButton(type="submit" class="stripe-button-el" style="visibility: visible;")
-          //  span(style="display: block; min-height: 30px;") Buy Month Subscription
+          //- br
+          //- br
+          
+          //- button.stripe-button-el#customButton(type="submit" class="stripe-button-el" style="visibility: visible;")
+          //-  span(style="display: block; min-height: 30px;") Buy Month Subscription
 
-          //br
-          //br
-          //
-          //button.stripe-button-el#customButton(type="submit" class="stripe-button-el" style="visibility: visible;")
-          //  span(style="display: block; min-height: 30px;") Buy Year Subscription
-
+          //- br
+          //- br
+          
+          //- button.stripe-button-el#customButton(type="submit" class="stripe-button-el" style="visibility: visible;")
+          //-  span(style="display: block; min-height: 30px;") Buy Year Subscription
 
         br
         br
         br
 
-
-      // if you're allowed to
-    if  user.plan == 'plus' &&  user.privs.youtubeBackup
+    //- if you're allowed to
+    if user.plan == 'plus' &&  user.privs.youtubeBackup
       h3.ytBackup
         br
         br
@@ -183,15 +177,15 @@ block content
         h3.fw.text-center(style="") YouTube Backup
         br
 
-        //form
-        //  .form-group
-        //    .col-sm-offset-3.col-sm-7
-        //      a.btn.btn-block.btn-google.btn-social(href='/auth/youtube')
-        //        i.fa.fa-youtube
-        //        | Sign in with YouTube
-        //
-        //br
-        //br
+        //-form
+        //-  .form-group
+        //-    .col-sm-offset-3.col-sm-7
+        //-      a.btn.btn-block.btn-google.btn-social(href='/auth/youtube')
+        //-        i.fa.fa-youtube
+        //-        | Sign in with YouTube
+        //-
+        //-br
+        //-br
 
       if !user.youtubeChannelId
         form.form-horizontal
@@ -204,7 +198,6 @@ block content
               button.btn.btn-primary.saveChannelId(type='submit')
                 i.fa.fa-pencil
                 | Save Channel Username
-
 
           br
           div.form-group.disabled
@@ -229,16 +222,16 @@ block content
     br
 
     h2.fw.text-center Channel Information
-      br
-      br
+    br
+    br
 
-    //form.upload-form(role="form" method="POST" enctype="multipart/form-data")
+    //- form.upload-form(role="form" method="POST" enctype="multipart/form-data")
     form.update-user-details-form.form-horizontal(role="form" method="POST" enctype="multipart/form-data" action=`${thumbnailServer}/account/profile`)
       input(type="hidden" name="uploadToken" value=`${user.uploadToken}`)
       .form-group
         label.fw.col-sm-3.control-label(for='channelName' style="font-size:17px;margin-top:16px;") Channel Username
         .col-sm-7
-          h3.fw= user.channelUrl
+          h3.fw #{user.channelUrl}
 
       .form-group
         label.fw.col-sm-3.control-label(for='channelName' style="font-size:17px;margin-top:-5px;") Channel Display Name
@@ -250,20 +243,20 @@ block content
         .col-sm-7
           textarea(id="description" name="description" maxlength='500' rows="7" cols="70" style="max-width:100%;color:#262525;") #{user.channelDescription}
 
-      // UPLOAD FORM IF NO THUMBNAIL
+      //- UPLOAD FORM IF NO THUMBNAIL
       if !user.thumbnailUrl
         .form-group
           label.fw.col-sm-3.control-label(for='channelName' style="font-size:17px;margin-top:-5px;") Channel Thumbnail
           .col-sm-7
-            // FILE INPUT BUTTON
+            //- FILE INPUT BUTTON
             input.center-block.text-center.fw(class="upload-file" data-max-size="500000000" type="file" name="filetoupload" accept="image/*" style="margin:0;margin-bottom:3px;border:0px;")
 
-        //div.form-group
-        //  div.col-sm-3.
-        //  p.col-sm-7(style="white-space:pre-line;margin-top:-15px;margin-bottom:-1px;").
-        //    Thumbnail dimensions:
-        //    width: up to 302px,
-        //    height: 168px
+        //-div.form-group
+        //-  div.col-sm-3.
+        //-  p.col-sm-7(style="white-space:pre-line;margin-top:-15px;margin-bottom:-1px;").
+        //-    Thumbnail dimensions:
+        //-    width: up to 302px,
+        //-    height: 168px
 
       .form-group
         .col-sm-offset-3.col-sm-4
@@ -272,7 +265,7 @@ block content
             | Update Profile
 
 
-    // DISPLAY THUMBNAIL IF IT EXISTS
+    //- DISPLAY THUMBNAIL IF IT EXISTS
 
     if user.thumbnailUrl || user.customThumbnail
       br
@@ -281,7 +274,7 @@ block content
 
         h2.fw.text-center Channel Thumbnail
         br
-        // TODO: Sub out thumbnail here
+        //- TODO: Sub out thumbnail here
 
         if user.customThumbnail
           a(href=`${uploadServer}/${user.channelUrl}/${user.customThumbnail}`)
@@ -300,7 +293,7 @@ block content
             i.fa.fa-pencil
             | Delete
 
-    // EMAIL FUNCTIONALITY
+    //- EMAIL FUNCTIONALITY
 
     if verifyEmailFunctionalityOn
 
@@ -313,14 +306,14 @@ block content
 
             h5.fw(style='font-size:19px;margin-top:18px;') Email Address : #{user.email}
 
-          // TODO: Have to finish this, can't think of a good design since I don't want users to spam emails
-          // TODO: also, the frontend is largely in place just needs a swal "Your email was deleted"
+          //- TODO: Have to finish this, can't think of a good design since I don't want users to spam emails
+          //- TODO: also, the frontend is largely in place just needs a swal "Your email was deleted"
           button.fw.btn.btn.btn-danger.btn-sm.center-block.text-center.deleteEmailButton(type='submit' style="margin-top:20px;border-radius:3px;")
             i.fa.fa-pencil
             | Delete
         br
 
-      // IS USER HAS PENDING CONFIRMATION EMAIL
+      //- IS USER HAS PENDING CONFIRMATION EMAIL
       if user.email && !user.emailConfirmed
         h3.fw.text-center Save Email
           br
@@ -336,7 +329,7 @@ block content
                 i.fa.fa-envelope
                 | Resend Confirmation Email
 
-      // IF USER HAS NOT SAVED EMAIL
+      //- IF USER HAS NOT SAVED EMAIL
       if !user.email
         h3.fw.text-center Save Email
           br
