--- a/views/media.pug
+++ b/views/media.pug
@@ -16,8 +16,8 @@ block content
                 }
             }
 
-    // TODO: make this cover more qualities
-    // TODO: also consider using upload.video
+    //- TODO: make this cover more qualities
+    //- TODO: also consider using upload.video
     if upload.bitrateInKbps > 1500 && upload.fileType == 'video'
         style.
             /** everything 650 and below */
@@ -718,14 +718,14 @@ block content
 
 
 
-                    //if maxRatingAllowed !== 'SFW'
-                    //    if upload.rating
-                    //        if upload.rating == 'allAges'
-                    //            p.fw(style="margin-top:15px;font-size:12px;") Rating: Safe For Work
-                    //        if upload.rating == 'mature'
-                    //            p.fw(style="margin-top:15px;font-size:12px;") Rating: Not Safe For Work
-                    //        if upload.rating == 'sensitive'
-                    //            p.fw(style="margin-top:15px;font-size:12px;") Rating: Sensitive (18+)
+                    //-if maxRatingAllowed !== 'SFW'
+                    //-    if upload.rating
+                    //-        if upload.rating == 'allAges'
+                    //-            p.fw(style="margin-top:15px;font-size:12px;") Rating: Safe For Work
+                    //-        if upload.rating == 'mature'
+                    //-            p.fw(style="margin-top:15px;font-size:12px;") Rating: Not Safe For Work
+                    //-        if upload.rating == 'sensitive'
+                    //-            p.fw(style="margin-top:15px;font-size:12px;") Rating: Sensitive (18+)
 
 
                     if convertedRating !== 'SFW'
@@ -759,14 +759,14 @@ block content
                 div.col-sm-12(style="margin-top:50px")
                     if user
                         if !viewingUserIsBlocked
-                            // comment form
+                            //- comment form
                             div.comment-form.form-group
                                 form.form-horizontal.overall-comment-form(class="comment-form" action='/api/comment', method='post')
                                     input(type='hidden', name='_csrf', value=_csrf)
                                     label.fw(for="comment" style="font-size:20px;") Enter Comment
                                     br
                                     input(type="hidden" name="upload" id="upload" value=upload._id)
-                                    textarea.commentInput.fw(name="comment" id="comment" minlength="2" style="width:800px;height:129px;max-width:100%;background-color:#151515;color:white;")
+                                    textarea.commentInput.fw(name="comment" id="comment" minlength="2" maxlength="250" style="width:800px;height:129px;max-width:100%;background-color:#151515;color:white;")
                                     br
                                     input.fw.btn.btn-md.btn-success.postCommentButton(type='submit' value="Post Comment" style="border-radius:4px")
                     else
@@ -1417,7 +1417,7 @@ block extra_footer_js
 
 
 
-  //COMMENT FUNCTIONALITY CONTAINED HERE
+  //-   COMMENT FUNCTIONALITY CONTAINED HERE
   script(src="/js/media.js")
 
 
