touching up header

--- a/views/account/accountHeader.pug
+++ b/views/account/accountHeader.pug
@@ -8,9 +8,9 @@ div.row
             h3.fw
                 a(href="/account/livestreaming") Livestreaming
 
-    div.col-sm-2
-        h3.fw
-            a(href=`/account/extra`) Extra
+    //div.col-sm-2
+    //    h3.fw
+    //        a(href=`/account/extra`) Extra
     //div.col-sm-2
     //  h3.fw
     //    a(href="/account/viewHistory") View History
