--- a/views/layoutPartials/optionalHeader.pug
+++ b/views/layoutPartials/optionalHeader.pug
@@ -315,4 +315,4 @@ style.
 
     div.secondLine(style="padding:0px;float:left;margin-top:-10px !important;border-bottom: 1px solid #cec0c0;width:100%;box-shadow:-3px 11px 10px -10px rgba(0,0,0,0.51);")
         a(href="/help" style="text-align:center;")
-            h3.clickableText(style="margin-top:10px;color:white;text-decoration:underline solid white 3px;") NEWTUBE NEEDS YOUR HELP
+            h3.clickableText(style="margin-top:10px;color:white;text-decoration:underline solid white 3px;opacity:0.8;") NEWTUBE NEEDS YOUR HELP
