--- a/views/public/help.pug
+++ b/views/public/help.pug
@@ -51,19 +51,26 @@ block content
             .embed-container
                 iframe(src='https://newtube.app/embed/7KH5xau/' style='border:0')
 
-            h1.fw(style="margin-bottom:21px") NewTube Needs Your Help!
+            h1.fw(style="margin-bottom:21px") NewTube Needs Your Help
 
-            p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Use NodeTube
+            //p.videoHeader.fw(style="font-size:24px;margin-top:11px;") Please Watch The Video Above
 
-            p.fw(style="font-size:18px") Popular Page, Recent Page, Media Page
+            br
 
-            p.fw(style="font-size:18px") Uploading Videos/Audio/Images, Livestreams, Other Features
+            p.fw(style="font-size:18px") I created NewTube by myself but now I need I need help to get this thing to the next stage
+
+            p.fw(style="font-size:18px") Every dollar I get helps and currently I'm not bringing in enough money
+
+            p.fw(style="font-size:18px") Please support me if you can with this. If you want to invest then please contact me at anthony@newtube.app
+
+            br
+            br
 
 
             h5.fw(style="font-size:18px") The donation is done securely through Stripe.
             h5.fw(style="font-size:18px") NewTube never sees your card info, it goes directly to Stripe through their technology
-            br
-            h5.fw(style="font-size:22px;margin-bottom:34px;") Thank you for any and all donations, your support is the backbone of this project!
+            //br
+            //h5.fw(style="font-size:22px;margin-bottom:34px;") Thank you for any and all donations, your support is the backbone of this project!
 
             h3.fw Donation Amount (USD):
             h3.fw
