--- a/views/viewPartials/adminSensitivityButtons.pug
+++ b/views/viewPartials/adminSensitivityButtons.pug
@@ -1,13 +1,27 @@
+// buttons on the bottom of the page to adjust visibility/maturity/category
+
 if user && user.role == 'admin'
     // TODO: need to add visibility
     div.center-block.text-center.col-sm-12(style="margin-top:30px")
+        h4 Change Rating
         button.btn-lg.button-success.change-rating(rating="sensitive") Mark As Sensitive
         button.btn-lg.button-success.change-rating(rating="mature") Mark As NSFW (Mature)
         button.btn-lg.button-success.change-rating(rating="allAges") Mark As SFW (AllAges)
 
+
         br
-        each category in categories
-          button.btn-md.button-success.change-rating(category=`${category.name}`) #{category.displayName}
+        h4 Change Visibility
+        button.btn-lg.button-success.change-visibility(rating="sensitive") Mark As Sensitive
+        button.btn-lg.button-success.change-visibility(rating="mature") Mark As NSFW (Mature)
+        button.btn-lg.button-success.change-visibility(rating="allAges") Mark As SFW (AllAges)
+
+        br
+        h4 Change Category
+        // categories loaded programatically
+
+        div(style="max-width:400px;margin:0 auto;")
+          each category in categories
+            button.btn-md.button-success.change-rating(category=`${category.name}`) #{category.displayName}
         br
         //each category in categories
         //  button.btn-md.button-success.change-category(category=`${category.name}`) #{category.displayName}
